package app.domain.model;

import java.util.List;

public class Client {
    /**
     * Client's name
     */
    private String name;
    /**
     * Client's citizen card number
     */
    private String citizencardnumber;

    /**
     * Client's National Healthcare Service number
     */
    private String nhs;

    /**
     * Client's birth date
     */
    private float date;

    /**
     * Client's gender
     */
    private float sex;

    /**
     * Client's tax identification number
     */
    private String tin;

    /**
     * Client's phone number
     */
    private float phonenumber;

    /**
     * Client's e-mail
     */
    private float email;

}
