@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0


class Receptionist {

}

class Client {
  -citizen card number
  -NHS number
  -birth date
  -sex
  -TIF
  -phone number
  -e-mail
  -name
}

class Email {
  -message
  -password
}

class Employee {
  -name
  -function
  -phone
  -email
}


Receptionist "1" -- "*" Client : register the >
Client "*" -- "1*" Email: receives >
Receptionist --|> Employee


@enduml